--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
+    "sass": "^1.70.0",
     "server-only": "^0.0.1"
   },
   "devDependencies": {
